<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="4"
    android:columnOrderPreserved="true"
    android:orientation="horizontal"
    android:rowCount="5">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/ac"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/c"
        android:textSize="@dimen/button_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/percent"
        android:textSize="@dimen/button_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/share"
        android:textSize="@dimen/button_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/multiply"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/minus"
        android:textSize="@dimen/button_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/plus"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_equals"
        android:textSize="@dimen/button_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_1"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_2"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_3"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_4"
        android:textSize="@dimen/button_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_5"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_6"
        android:textSize="@dimen/button_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_7"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_8"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_9"
        android:textSize="@dimen/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/_0"
        android:textSize="@dimen/button_text" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_margin="@dimen/dimensionbetweenbuttons"
        android:background="@drawable/rounded_button"
        android:text="@string/point"
        android:textSize="@dimen/button_text" />
</GridLayout>


